Solve overflow issue

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+html {
+  overflow: hidden;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
@@ -8,6 +12,12 @@ body {
   overflow: hidden;
 }
 
+#root {
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
@@ -15,7 +25,7 @@ code {
 
 @keyframes rolling {
   0% {
-    transform: rotate(90deg) translateX(0);
+    transform: rotate(90deg) translateX(0%);
   }
   100% {
     transform: rotate(90deg) translateX(-130%);
